Source/Alternet.UI/Native/PrintDialog.Generated.cs

// <auto-generated> DO NOT MODIFY MANUALLY. Copyright (c) 2026 AlterNET Software.</auto-generated>
#nullable enable
#pragma warning disable

using System;
using System.Runtime.InteropServices;
using System.ComponentModel;
using System.Security;
namespace Alternet.UI.Native
{
    internal partial class PrintDialog : NativeObject
    {
        static PrintDialog()
        {
        }
        
        public PrintDialog()
        {
            SetNativePointer(NativeApi.PrintDialog_Create_());
        }
        
        public PrintDialog(IntPtr nativePointer) : base(nativePointer)
        {
        }
        
        public bool AllowSomePages
        {
            get
            {
                CheckDisposed();
                return NativeApi.PrintDialog_GetAllowSomePages_(NativePointer);
            }
            
            set
            {
                CheckDisposed();
                NativeApi.PrintDialog_SetAllowSomePages_(NativePointer, value);
            }
        }
        
        public bool AllowSelection
        {
            get
            {
                CheckDisposed();
                return NativeApi.PrintDialog_GetAllowSelection_(NativePointer);
            }
            
            set
            {
                CheckDisposed();
                NativeApi.PrintDialog_SetAllowSelection_(NativePointer, value);
            }
        }
        
        public bool AllowPrintToFile
        {
            get
            {
                CheckDisposed();
                return NativeApi.PrintDialog_GetAllowPrintToFile_(NativePointer);
            }
            
            set
            {
                CheckDisposed();
                NativeApi.PrintDialog_SetAllowPrintToFile_(NativePointer, value);
            }
        }
        
        public bool ShowHelp
        {
            get
            {
                CheckDisposed();
                return NativeApi.PrintDialog_GetShowHelp_(NativePointer);
            }
            
            set
            {
                CheckDisposed();
                NativeApi.PrintDialog_SetShowHelp_(NativePointer, value);
            }
        }
        
        public PrintDocument? Document
        {
            get
            {
                CheckDisposed();
                var _nnn = NativeApi.PrintDialog_GetDocument_(NativePointer);
                var _mmm = NativeObject.GetFromNativePointer<PrintDocument>(_nnn, p => new PrintDocument(p));
                ReleaseNativeObjectPointer(_nnn);
                return _mmm;
            }
            
            set
            {
                CheckDisposed();
                NativeApi.PrintDialog_SetDocument_(NativePointer, value?.NativePointer ?? IntPtr.Zero);
            }
        }
        
        public Alternet.UI.ModalResult ShowModal(Window? owner)
        {
            CheckDisposed();
            return NativeApi.PrintDialog_ShowModal_(NativePointer, owner?.NativePointer ?? IntPtr.Zero);
        }
        
        
        [SuppressUnmanagedCodeSecurity]
        public class NativeApi : NativeApiProvider
        {
            static NativeApi() => Initialize();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr PrintDialog_Create_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool PrintDialog_GetAllowSomePages_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void PrintDialog_SetAllowSomePages_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool PrintDialog_GetAllowSelection_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void PrintDialog_SetAllowSelection_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool PrintDialog_GetAllowPrintToFile_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void PrintDialog_SetAllowPrintToFile_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool PrintDialog_GetShowHelp_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void PrintDialog_SetShowHelp_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr PrintDialog_GetDocument_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void PrintDialog_SetDocument_(IntPtr obj, IntPtr value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.UI.ModalResult PrintDialog_ShowModal_(IntPtr obj, IntPtr owner);
            
        }
    }
}
